Bug squashing

--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -10,7 +10,7 @@
 }
 
 .alpha {
-  background-color: #910000;
+  background-color: #008c00;
   color: white;
   text-align: center;
   padding: 10px;
